--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
+
 body {
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  background-color: hsl(216, 12%, 8%);
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
+}
+
+.container {
+  background-color: hsl(213, 19%, 18%);
+  margin: 0px 85px;
+  padding: 80px 30px;
+  border-radius: 20px;
 }
