--- a/style.css
+++ b/style.css
@@ -13,18 +13,25 @@ body {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   background-color: hsl(216, 12%, 8%);
   margin: 0px 85px;
-  padding: 90px 40px;
+  padding: 35px 50px;
   border-radius: 20px;
 }
 
 img {
   background-color: hsl(213, 19%, 18%);
+  width: 25px;
+  height: 25px;
+  padding: 10px;
+  border-radius: 50%;
+  margin-bottom: 25px;
 }
 
 h1 {
-  color: white;
+  color: hsl(0, 0%, 100%);
 }
 
 p {
@@ -37,10 +44,20 @@ p {
 }
 
 .rating-btn {
-  padding: 20px 25px;
+  padding: 15px 20px;
   border-radius: 50%;
   background-color: hsl(213, 19%, 18%);
   color: hsl(216, 12%, 54%);
   border: none;
   margin-top: 10px;
+}
+
+.submit-btn {
+  background-color: hsl(25, 97%, 53%);
+  border: none;
+  width: 100%;
+  padding: 15px;
+  border-radius: 20px;
+  color: hsl(0, 0%, 100%);
+  margin-top: 30px;
 }
