--- a/style.css
+++ b/style.css
@@ -16,8 +16,10 @@ body {
   display: flex;
   flex-direction: column;
   background-color: hsl(216, 12%, 8%);
+  width: 300px;
+  height: 350px;
   margin: 0px 110px;
-  padding: 45px 50px 30px 50px;
+  padding: 30px 45px 0px 45px;
   border-radius: 25px;
 }
 
@@ -27,11 +29,12 @@ img {
   height: 25px;
   padding: 10px;
   border-radius: 50%;
-  margin-bottom: 25px;
+  margin: 5px 0px 25px 0px;
 }
 
 h1 {
   color: hsl(0, 0%, 100%);
+  font-size: 25px;
   margin: 0;
 }
 
@@ -62,6 +65,7 @@ p {
   border-radius: 20px;
   color: hsl(0, 0%, 100%);
   margin-top: 30px;
+  font-family: inherit;
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 2px;
