--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body {
   background-color: hsl(216, 12%, 8%);
   width: 300px;
   height: 350px;
-  margin: 0px 110px;
   padding: 30px 45px 0px 45px;
   border-radius: 25px;
 }
@@ -69,6 +68,23 @@ p {
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+
+.thank-you-container {
+  position: absolute;
+  background-color: hsl(216, 12%, 8%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  height: 300px;
+  padding: 30px 00px 0px 10px;
+  border-radius: 25px;
+}
+
+.active.thank-you-container {
+  visibility: hidden;
+  opacity: 0;
 }
 
 .attribution {
