--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   background-color: hsl(216, 12%, 8%);
   width: 300px;
-  height: 350px;
+  height: 400px;
   padding: 30px 45px 0px 45px;
   border-radius: 25px;
 }
@@ -76,9 +76,10 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 350px;
-  height: 300px;
-  padding: 30px 00px 0px 10px;
+  width: 300px;
+  height: 400px;
+  justify-content: center;
+  padding: 0px 45px 0px 45px;
   border-radius: 25px;
 }
 
@@ -86,6 +87,26 @@ p {
   visibility: hidden;
   opacity: 0;
 }
+
+.image {
+  width: 180px;
+  height: 120px;
+  background-image: url(/images/illustration-thank-you.svg);
+  background-size: cover;
+  object-fit: contain;
+}
+
+/** Instead I made a div that contained the image (above this line) and that made the issue of having the image fit the size much easier than what I was trying to do below this line.*/
+/* .thank-you-container img {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  width: 170px;
+  height: 170px;
+  background-color: hsl(216, 12%, 8%);
+  overflow: hidden;
+  object-fit: contain;
+} */
 
 .attribution {
   color: white;
