--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ p {
   opacity: 0;
 }
 
-.image {
+.thank-you-image {
   width: 180px;
   height: 120px;
   background-image: url(/images/illustration-thank-you.svg);
