--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ body {
   border-radius: 25px;
 }
 
+.active.container {
+  visibility: hidden;
+  opacity: 0;
+}
+
 img {
   background-color: hsl(213, 19%, 18%);
   width: 25px;
@@ -56,6 +61,11 @@ p {
   border: none;
   margin-top: 20px;
   cursor: pointer;
+}
+
+.rating-btn:hover {
+  background-color: hsl(217, 12%, 63%);
+  color: white;
 }
 
 .submit-btn {
