CSS and JavaScript event listeners added
Added :active pseudo classes in the CSS file on the ".rating-btn"
class in order to scale the button and give a popout effect when the
button is clicked. In the JavaScript file a event listener was added
to the "btnRatingContainer" element, in order to track and handle
which one of the buttons was clicked. As well adding or removing the
"active" class accordingly, depending on which button was clicked or not
clicked. Active pseudo class added to submit button for styling.

--- a/style.css
+++ b/style.css
@@ -72,6 +72,13 @@ p {
   background-color: hsl(25, 97%, 53%);
   color: white;
 }
+.rating-btn:active {
+  transform: scale(1.1);
+}
+
+.active.rating-btn:active {
+  transform: scale(1.1);
+}
 
 .submit-btn {
   background-color: hsl(25, 97%, 53%);
@@ -86,6 +93,11 @@ p {
   text-transform: uppercase;
   letter-spacing: 2px;
   cursor: pointer;
+}
+
+.submit-btn:active {
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(25, 97%, 53%);
 }
 
 .thank-you-container {
