--- a/style.css
+++ b/style.css
@@ -109,7 +109,8 @@ p {
   width: 300px;
   height: 400px;
   justify-content: center;
-  padding: 0px 45px 0px 45px;
+  padding: 30px 45px 0px 45px;
+  margin-bottom: 18px;
   border-radius: 25px;
 }
 
