--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Lato&display=swap");
 
 body {
   margin: 0;
@@ -8,7 +8,7 @@ body {
   height: 100vh;
   justify-content: center;
   background-color: black;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 15px;
 }
 
@@ -117,6 +117,7 @@ p {
 .active.thank-you-container {
   visibility: hidden;
   opacity: 0;
+  z-index: 2;
 }
 
 .thank-you-image {
@@ -125,19 +126,8 @@ p {
   background-image: url(/images/illustration-thank-you.svg);
   background-size: cover;
   margin: 0 0 35px;
+  z-index: 1;
 }
-
-/** Instead I made a div that contained the image (above this line) and that made the issue of having the image fit the size much easier than what I was trying to do below this line.*/
-/* .thank-you-container img {
-  position: relative;
-  padding: 0;
-  margin: 0;
-  width: 170px;
-  height: 170px;
-  background-color: hsl(216, 12%, 8%);
-  overflow: hidden;
-  object-fit: contain;
-} */
 
 .selected-rating {
   margin: 0 0 40px;
